# server-SO

./: CMakeLists.txt  Makefile  README.md  commands.c  contact.c  contact.h  main.c  server.c  user.c  user.h
include/: commands.h  contact.h  server.h  user.h
src/: commands.c  contact.c  main.c  server.c  user.c
